# capsula

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  capsula.toml  mkdocs.yml  poetry.toml  pyproject.toml  renovate.json  renovate.json5  tox.ini  versions.json
.github/workflows/: bump-version.yaml  bump-version.yml  deploy-docs.yaml  deploy-docs.yml  pytest.yml  release-draft.yml  release.yaml  release.yml  ruff.yaml  ruff.yml  test.yaml  test.yml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/concepts/: index.html
0.4.0/config/: index.html
0.4.0/contexts/: index.html
0.4.0/extending/: index.html
0.4.0/reporters/: index.html
0.4.0/search/: search_index.json
0.4.0/watchers/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/concepts/: index.html
0.5.0/config/: index.html
0.5.0/contexts/: index.html
0.5.0/extending/: index.html
0.5.0/helpers/: index.html
0.5.0/reporters/: index.html
0.5.0/search/: search_index.json
0.5.0/watchers/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/concepts/: index.html
0.5.1/config/: index.html
0.5.1/contexts/: index.html
0.5.1/extending/: index.html
0.5.1/helpers/: index.html
0.5.1/reporters/: index.html
0.5.1/watchers/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/concepts/: index.html
0.6.0/config/: index.html
0.6.0/contexts/: index.html
0.6.0/extending/: index.html
0.6.0/helpers/: index.html
0.6.0/reporters/: index.html
0.6.0/search/: search_index.json
0.6.0/watchers/: index.html
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/concepts/: index.html
0.7.0/config/: index.html
0.7.0/contexts/: index.html
0.7.0/extending/: index.html
0.7.0/helpers/: index.html
0.7.0/reporters/: index.html
0.7.0/watchers/: index.html
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0/concepts/: index.html
0.8.0/config/: index.html
0.8.0/contexts/: index.html
0.8.0/extending/: index.html
0.8.0/helpers/: index.html
0.8.0/reporters/: index.html
0.8.0/watchers/: index.html
capsula/: __init__.py  __main__.py  _backport.py  _capsule.py  _cli.py  _config.py  _context.py  _decorator.py  _encapsulator.py  _exceptions.py  _monitor.py  _record.py  _root.py  _run.py  _utils.py  _version.py  capsule.py  capture.py  config.py  context.py  context_deprecated.py  encapsulator.py  environment.py  exceptions.py  file.py  freeze.py  globalvars.py  hash.py  monitor.py  utils.py
capsula-cli/: Cargo.toml
capsula-cli/src/: main.rs
capsula-core/: Cargo.toml
capsula-core/src/: captured.rs  context.rs  lib.rs
capsula-core/tests/: cwd_context.rs
capsula-cwd-context/: Cargo.toml
capsula-cwd-context/src/: lib.rs
capsula-cwd-context/tests/: cwd_context.rs
capsula/_context/: __init__.py  _base.py  _command.py  _cpu.py  _cwd.py  _envvar.py  _file.py  _function.py  _git.py  _platform.py
capsula/_reporter/: __init__.py  _base.py  _json.py  _slack.py  _utils.py
capsula/_watcher/: __init__.py  _base.py  _exception.py  _time.py
capsula/context/: __init__.py  _base.py  _command.py  _cwd.py  _file.py  _git.py
capsula/notify/: base.py  slack.py
capsula/reporter/: __init__.py  _base.py  _json.py
capsula/watcher/: __init__.py  _base.py  _exception.py  _time.py
crates/capsula-cli/: Cargo.toml
crates/capsula-cli/src/: main.rs
crates/capsula-config/: Cargo.toml
crates/capsula-config/src/: lib.rs
crates/capsula-config/tests/: integration_test.rs
crates/capsula-core/: Cargo.toml
crates/capsula-core/src/: context.rs  error.rs  lib.rs  run.rs
crates/capsula-cwd-context/: Cargo.toml
crates/capsula-cwd-context/src/: config.rs  lib.rs
crates/capsula-cwd-context/tests/: cwd_context.rs
crates/capsula-file-context/: Cargo.toml
crates/capsula-file-context/src/: config.rs  hash.rs  lib.rs
crates/capsula-git-context/: Cargo.toml
crates/capsula-registry/: Cargo.toml
crates/capsula-registry/src/: lib.rs
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/concepts/: index.html
dev/config/: index.html
dev/contexts/: index.html
dev/extending/: index.html
dev/helpers/: index.html
dev/reporters/: index.html
dev/search/: search_index.json
dev/watchers/: index.html
docs/: concepts.md  config.md  extending.md  helpers.md  index.md  reference.md
docs/contexts/: command.md  cpu.md  cwd.md  envvar.md  file.md  function.md  git.md  index.md  platform.md
docs/reporters/: index.md  json_dump.md  slack.md
docs/watchers/: index.md  time.md  uncaught_exception.md
examples/: calculate_pi_cli.py  calculate_pi_dec.py  context_manager.py  decorator.py  enc_context_manager.py  exception.py  low_level.py  simple_decorator.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/concepts/: index.html
latest/config/: index.html
latest/contexts/: index.html
latest/extending/: index.html
latest/helpers/: index.html
latest/reporters/: index.html
latest/search/: search_index.json
latest/watchers/: index.html
reports/coverage/: d_36c8d90f68227790___init___py.html  d_36c8d90f68227790__monitor_py.html  d_36c8d90f68227790__version_py.html  d_36c8d90f68227790_capture_py.html  d_36c8d90f68227790_config_py.html  d_36c8d90f68227790_context_py.html  d_36c8d90f68227790_file_py.html  d_36c8d90f68227790_globalvars_py.html  d_36c8d90f68227790_hash_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_capture_py.html  index.html  status.json  update_report.sh
scripts/: bump-version.py  bump_version.py  gen_index.py  gen_pages.py  gen_ref_pages.py  get-version.py  get_version.py
src/capsula/: __init__.py  _backport.py  _capsule.py  _cli.py  _decorator.py  _encapsulator.py  _root.py  _run.py  _utils.py
tests/: conftest.py  test_capture.py  test_decorator.py  test_file.py  test_globalvars.py  test_hash.py  test_monitor.py  test_run.py  test_utils.py  utils.py
tests/context/: test_command.py  test_file.py
v0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/concepts/: index.html
v0.7.0/: 404.html  index.html  sitemap.xml
(+160 files in other folders)
