[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
capsula-cli = { path = "crates/capsula-cli" }
capsula-core = { path = "crates/capsula-core" }
capsula-cwd-context = { path = "crates/capsula-cwd-context" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

[workspace.lints.rust]
