[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
capsula-cli = { path = "crates/capsula-cli" }
capsula-config = { path = "crates/capsula-config" }
capsula-core = { path = "crates/capsula-core" }
capsula-cwd-context = { path = "crates/capsula-cwd-context" }
capsula-git-context = { path = "crates/capsula-git-context" }
capsula-registry = { path = "crates/capsula-registry" }
capsula-file-context = { path = "crates/capsula-file-context" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ulid = { version = "1", features = ["serde"] }
chrono = "0.4"
names = "0.14"
shlex = "1"
sha2 = "0.10"
globwalk = "0.9"


[workspace.lints.rust]
