[package]
name = "capsula-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# capsula-config = { workspace = true }
capsula-core = { workspace = true }
capsula-cwd-context = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.5.47", features = ["derive"] }

[lints]
workspace = true
