[package]
name = "capsula-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capsula-config = { workspace = true }
capsula-core = { workspace = true }
capsula-registry = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
