[package]
name = "capsula-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capsula-core = { workspace = true }
capsula-registry = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.6"

[lints]
workspace = true
