[package]
name = "capsula-cwd-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
capsula-core = { workspace = true }
capsula-registry = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
